bugfix: x-axis overflow removed

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -281,7 +281,7 @@ a:hover {
 [class*="span"] {
   float: left;
   min-height: 1px;
-  margin-left: 20px;
+  /*margin-left: 20px;*/
 }
 
 .container,
